<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="crypto"
            type="data.Crypto" />

        <variable
            name="price"
            type="String" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            tools:context=".SymbolViewActivity">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/symbol_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{crypto.symbol}"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:text="SAND" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/add_to_watchlist"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_star_unselected" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/coin_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@id/symbol_title"
                android:layout_marginTop="12dp"
                android:src="@drawable/splash_icon" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/symbol_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/coin_view"
                android:text="@string/current_buy_price"
                android:textColor="@color/cardview_dark_background"
                android:textSize="16sp"
                app:changeTitleText="@{price}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/baseAsset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/symbol"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/coin_view"
                android:text="@{`$` + crypto.lastPrice}"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:changePriceText="@{price}"
                app:crypto="@{crypto}"
                tools:text="$234242334" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/buy_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/symbol_title"
                android:layout_alignBaseline="@id/baseAsset"
                android:layout_alignParentEnd="true"
                android:text="@string/buy_price"
                android:textColor="@color/purple_700"
                android:textSize="14sp"
                app:changePriceTitleText="@{price}"
                app:drawableRightCompat="@drawable/buy_price_icon_drawable" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/one_day_highest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/baseAsset"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@{`1D Highest`  +`   $` + crypto.highPrice}"
                android:textColor="@color/cardview_dark_background"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/one_day_lowest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/baseAsset"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/one_day_highest"
                android:text="@{`1D Lowest` +`   $` + crypto.lowPrice}"
                android:textColor="@color/cardview_dark_background"
                android:textSize="14sp" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph_view"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/one_day_lowest"
                android:layout_marginTop="10dp" />


            <include
                android:id="@+id/more_layout_view"
                layout="@layout/more_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/graph_view"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                app:crypto="@{crypto}" />

            <androidx.cardview.widget.CardView
                android:id="@+id/bidsAndAsksCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/more_layout_view"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:elevation="10dp"
                app:cardBackgroundColor="#F0F0F3"
                app:cardCornerRadius="5dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/bidsAndAsks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/bids_amp_asks"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_right_arrow_svgrepo_com" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/trade_list_Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bidsAndAsksCard"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:elevation="10dp"
                app:cardBackgroundColor="#F0F0F3"
                app:cardCornerRadius="5dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/trade_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:text="@string/trades_list"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_right_arrow_svgrepo_com" />


            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>